trackeditor: Replace use of isBlank()
isBlank() was introduced by Java 11. However, Speed Dreams still
requires Java 8 (aka 1.8).


git-svn-id: https://svn.code.sf.net/p/speed-dreams/code/trunk@9532 30fe4595-0a0c-4342-8851-515496e4dcbd

Former-commit-id: 07bedd81d76ea78bfe06c37ade02ef5abff4962d
Former-commit-id: e5d12ce350800abfb26c804597b8806e9519a937